--- a/WebContent/learn-jsgrid.html
+++ b/WebContent/learn-jsgrid.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="learn-jquery.css" />
@@ -30,10 +36,91 @@
      -->
   </head>
   <body>
-    <div id="jsGrid"></div>
+    <div class="h1">
+      <span class="badge bg-primary"> Hi </span>
+    </div>
 
     <input type="button" onclick="goSave()" value="Save" />
     <input type="button" onclick="goTest()" value="Test" />
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          1 of 2
+          <div class="d-flex flex-column flex-wrap m-3" style="height: 100vh">
+            <div class="card m-1 align-self-start" style="width: 18rem">
+              <div class="card-body p-0">
+                <h5 class="card-title bg-primary p-1">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted p-1">Card subtitle</h6>
+                <p class="card-text p-1">
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                  accusantium doloremque laudantium, totam rem aperiam, eaque
+                  ipsa quae ab illo inventore veritatis et quasi architecto
+                  beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
+                </p>
+                <a href="#" class="card-link p-1">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+              </div>
+            </div>
+
+            <div class="card m-1 align-self-start" style="width: 18rem">
+              <div class="card-body p-0">
+                <h5 class="card-title bg-secondary p-1">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted p-1">Card subtitle</h6>
+                <p class="card-text p-1">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content. quia voluptas sit aspernatur
+                  aut odit aut fugit, sed quia consequuntur magni dolores eos
+                  qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+                  est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                  adipisci velit, sed quia non numquam eius modi tempora
+                  incidunt ut labore et dolore magnam aliquam quaerat
+                  voluptatem. Ut enim ad minima veniam, quis nostrum
+                  exercitationem ullam corporis suscipit laboriosam, nisi ut
+                  aliquid ex ea commodi consequatur? Quis autem vel eum iure
+                  reprehenderit qui in ea voluptate velit esse quam nihil
+                  molestiae consequatur, vel illum qui dolorem eum fugiat quo
+                  voluptas nulla pariatur?
+                </p>
+                <a href="#" class="card-link p-1">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+              </div>
+            </div>
+
+            <div class="card m-1 align-self-start" style="width: 18rem">
+              <div class="card-body p-0">
+                <h5 class="card-title bg-success p-1">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted p-1">Card subtitle</h6>
+                <p class="card-text p-1">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="card-link p-1">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+              </div>
+            </div>
+
+            <div class="card m-1 align-self-start" style="width: 18rem">
+              <div class="card-body p-0">
+                <h5 class="card-title bg-warning p-1">Card title</h5>
+                <h6 class="card-subtitle mb-2 text-muted p-1">Card subtitle</h6>
+                <p class="card-text p-1">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="card-link p-1">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          2 of 2
+          <div id="jsGrid"></div>
+        </div>
+      </div>
+    </div>
   </body>
 
   <script>
