--- a/WebContent/learn-jsgrid.html
+++ b/WebContent/learn-jsgrid.html
@@ -7,6 +7,7 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="learn-jquery.css" />
@@ -39,6 +40,62 @@
     <div class="h1">
       <span class="badge bg-primary"> Hi </span>
     </div>
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+
+    <span
+      class="d-inline-block"
+      tabindex="0"
+      data-bs-toggle="tooltip"
+      title="Disabled tooltip"
+    >
+      <button
+        class="btn btn-primary"
+        style="pointer-events: none"
+        type="button"
+        disabled
+      >
+        Disabled button
+      </button>
+    </span>
+
+    <button
+      type="button"
+      class="btn btn-secondary"
+      data-bs-toggle="tooltip"
+      data-bs-placement="top"
+      title="Tooltip on top"
+    >
+      Tooltip on top
+    </button>
+    <button
+      type="button"
+      class="btn btn-secondary"
+      data-bs-toggle="tooltip"
+      data-bs-placement="right"
+      title="Tooltip on right"
+    >
+      Tooltip on right
+    </button>
+    <button
+      type="button"
+      class="btn btn-secondary"
+      data-bs-toggle="tooltip"
+      data-bs-placement="bottom"
+      title="Tooltip on bottom"
+    >
+      Tooltip on bottom
+    </button>
+    <button
+      type="button"
+      class="btn btn-secondary"
+      data-bs-toggle="tooltip"
+      data-bs-placement="left"
+      title="Tooltip on left"
+    >
+      Tooltip on left
+    </button>
 
     <input type="button" onclick="goSave()" value="Save" />
     <input type="button" onclick="goTest()" value="Test" />
@@ -121,6 +178,12 @@
         </div>
       </div>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
   </body>
 
   <script>
@@ -239,5 +302,12 @@
       // clients.forEach((client, i) => console.log(client.Married ? i : ""));
       console.log(clients.filter((client) => client.Married));
     }
+
+    var tooltipTriggerList = [].slice.call(
+      document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    );
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl);
+    });
   </script>
 </html>
