--- a/WebContent/learn-jsgrid-02.html
+++ b/WebContent/learn-jsgrid-02.html
@@ -177,10 +177,7 @@
         <div class="col">
           1 of 2
 
-          <div
-            class="d-flex flex-column flex-wrap m-3"
-            style="height: 100vh"
-          ></div>
+          <div class="d-flex flex-column flex-wrap m-3"></div>
         </div>
 
         <div class="col">2 of 2</div>
@@ -333,9 +330,9 @@
       display: flex;
       flex-wrap: wrap;
       flex-direction: column;
-      justify-content: flex-start;
+      /* justify-content: flex-end; */
       max-height: 35vh;
-      width: auto;
+      width: 50%;
       /* background-color: aqua; */
     }
     .top-right-panel {
@@ -345,7 +342,6 @@
     }
 
     .bottom-panel {
-      height: auto;
       background-color: bisque;
       padding: 10px;
     }
