--- a/WebContent/learn-jsgrid-02.html
+++ b/WebContent/learn-jsgrid-02.html
@@ -335,11 +335,12 @@
     .top-left-panel {
       display: flex;
       flex-wrap: wrap;
-      flex-direction: row;
+      flex-direction: column;
       /* justify-content: flex-end; */
       max-height: 40vh;
-      width: auto;
+      width: 100%;
       /* background-color: aqua; */
+      align-content: flex-start;
     }
     .top-right-panel {
       width: 15%;
