using css display block, column-count to achieve desired layout

--- a/WebContent/learn-jquery.html
+++ b/WebContent/learn-jquery.html
@@ -244,7 +244,7 @@
       html_resultinfo +=`<td>${client.Address}</td>`;
       html_resultinfo +=`<td>${client.Married}</td>`;
       html_resultinfo +=`</tr>`;
-      $('#infotitle').after(html_resultinfo);
+      $('#infotitle').p(html_resultinfo);
     })
 
   })
