css custom-data selector

--- a/WebContent/learn-jsgrid-02.html
+++ b/WebContent/learn-jsgrid-02.html
@@ -197,7 +197,7 @@
     }
 
     .bottom-right-panel {
-      background-color: cadetblue; 
+      /* background-color: cadetblue;  */
       padding: 10px;
     }
 
@@ -205,8 +205,7 @@
       position: sticky; 
       flex-grow: 1;
       width: 50%;
-      position: sticky; 
-      top: 20px; 
+      top: 50px; 
       height:70vh;
     }
 
@@ -263,5 +262,33 @@
       }
     }
 
+    div[data-todo-group="panel01"] {
+      background-color: #e0691f;
+    }
+
+    div[data-todo-group="panel02"] {
+      background-color: #e0bd1f;
+    }
+    div[data-todo-group="panel03"] {
+      background-color: #69d16c;
+    }
+    div[data-todo-group="panel04"] {
+      background-color: #1fe0d0;
+    }
+    div[data-todo-group="panel05"] {
+      background-color: #a6c797;
+    }
+    div[data-todo-group="panel06"] {
+      background-color: #c193c2;
+    }
+    div[data-todo-group="panel07"] {
+      background-color: #c2ab93;
+    }
+    div[data-todo-group="panel08"] {
+      background-color: #159e73;
+    }
+    div[data-todo-group="panel09"] {
+      background-color: #697cd1;
+    }
   </style>
 </html>
