added two-click swap elements

--- a/WebContent/learn-jsgrid-02.html
+++ b/WebContent/learn-jsgrid-02.html
@@ -106,7 +106,7 @@
           <img class="img-size" src="images/tortoise.svg" />
         </div>
         <div>
-          <span class="card-control" onclick="swapView()">swap</span>
+          <span class="card-control" onclick="swapView()">swap view</span>
           <span class="card-control" onclick="reset()" alt="reset">reset</span>
           <abbr title="help">help</abbr>
         </div>
