--- a/WebContent/learn-jsgrid-02.html
+++ b/WebContent/learn-jsgrid-02.html
@@ -106,8 +106,8 @@
           <img class="img-size" src="images/tortoise.svg" />
         </div>
         <div>
-          <span class="card-control" onclick="swapView()">swap view</span>
-          <span class="card-control" onclick="reset()" alt="reset">reset</span>
+          <span class="btn btn-primary card-control" onclick="swapView()">swap view</span>
+          <span class="btn btn-primary card-control" onclick="reset()" alt="reset">reset</span>
           <abbr title="help">help</abbr>
         </div>
       </div>
