--- a/WebContent/learn-jsgrid-02.html
+++ b/WebContent/learn-jsgrid-02.html
@@ -27,6 +27,10 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.js"
     ></script>
+
+    <script type="module" src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>    
+    <script type="module" src="js/html2canvas.js"></script>
+
     <meta charset="UTF-8" />
     <title>CSS Position</title>
 
@@ -107,6 +111,7 @@
         </div>
         <div>
           <span class="btn btn-primary card-control" onclick="swapView()">swap view</span>
+          <span class="btn btn-primary card-control" onclick="capture3()">Print Screen</span>
           <span class="btn btn-primary card-control" onclick="reset()" alt="reset">reset</span>
           <abbr title="help">help</abbr>
         </div>
@@ -144,6 +149,48 @@
 
   <script>
  
+ function capture2(){
+      const { jsPDF } = window.jspdf;
+
+      var doc = new jsPDF();
+
+      html2canvas(document.body).then(function(canvas){
+        var img = canvas.toDataURL("image/png", wid = canvas.width, hgt = canvas.height);
+        var hratio = hgt/wid
+        var doc = new jsPDF('p','pt','a4');
+        var width = doc.internal.pageSize.width;    
+        var height = width * hratio
+        doc.addImage(img,'JPEG',20,20, width, height);
+        doc.save('Test.pdf');
+    });
+    } 
+
+    function capture3(){
+      //How do I get a multi-page pdf from a website using jsPDF and HTML2Canvas?
+      //https://stackoverflow.com/questions/27045704/how-do-i-get-a-multi-page-pdf-from-a-website-using-jspdf-and-html2canvas
+
+      const { jsPDF } = window.jspdf;
+      html2canvas(document.body).then(function(canvas){
+        var imgData = canvas.toDataURL('image/png');
+        var imgWidth = 210; 
+        var pageHeight = 295;  
+        var imgHeight = canvas.height * imgWidth / canvas.width;
+        var heightLeft = imgHeight;
+        var doc = new jsPDF('p', 'mm');
+        var position = 0;
+
+        doc.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+        heightLeft -= pageHeight;
+
+        while (heightLeft >= 0) {
+          position = heightLeft - imgHeight;
+          doc.addPage();
+          doc.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+          heightLeft -= pageHeight;
+        }
+        doc.save('file.pdf');
+      })
+    }
   </script>
 
   <style>
